<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">consent</string>
    <string name="title_activity_consent">Consent</string>
    <string name="title_activity_consent_requests">Consent Requests</string>
    <string name="tab_requests">requests</string>
    <string name="tab_consents">My consents</string>

    <string name="new_request">Consent Request</string>
    <string name="granted_consent">Granted Consent</string>
    <string name="denied_consent">Denied Consent</string>
    <string name="revoked_consent">Revoked Consent</string>
    <string name="expired_consent">Expired Consent</string>
    <string name="edit_request">Edit request</string>
    <string name="confirm_request">Confirm request</string>
    <string name="edit">Edit</string>
    <string name="requests_information_type">Requests information type</string>
    <string name="deny">deny</string>
    <string name="grant_request">Grant consent</string>
    <string name="consent_expiry">Consent expiry</string>
    <string name="loading_requests">We are loading your consent requests\n\nThis may take up a few seconds&#8230;</string>
    <string name="loading_linked_accounts">We are loading your accounts\n\nThis may take up a few seconds&#8230;</string>

    <string name="status_active_requested_consents">Active consent requests</string>
    <string name="status_expired_requested_consents">Expired consent requests</string>
    <string name="status_denied_consent_requests">Denied consent requests</string>
    <string name="status_all_requested_consents">All consent requests</string>

    <string name="status_active_granted_consents">Granted consents</string>
    <string name="status_expired_granted_consents">Expired consents</string>
    <string name="status_revoked_consents">Revoked consents</string>
    <string name="status_all_consents_artifacts">All consents</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="accounts_to_provide_information">Accounts to provide information</string>
    <string name="all_linked_providers">All linked providers</string>
    <string name="confirm">confirm</string>
    <string name="grant_consent_disclaimer">By granting this consent, you also agree to let %s view your health information from all the linked accounts.</string>
    <string name="consent_removed">Consent removed</string>
    <string name="undo">Undo</string>
    <string name="title_revoke_consent">Revoke consent?</string>
    <string name="btn_revoke_consent">Revoke</string>
    <string name="msg_revoke_consent">On revoking this consent, your health data will not be accessible to the requester.</string>
    <string name="consent_request_denied">Consent request denied</string>
    <string name="consent_request_granted">Consent request granted successfully</string>
    <string name="consent_details">Consent Details</string>
    <string name="all_providers">All Providers</string>
    <string name="you_have_given_access_to">You have given access to</string>
    <string name="all_linked_providers_with_count">All linked providers (%d)</string>
    <string name="user_verification_label">For securing your\nhealth information,\nyou need a Consent PIN</string>
    <string name="create_pin">Create a 4 digit consent PIN</string>
    <string name="title_confirm_pin">Confirm consent PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_pin">Enter 4 digit consent PIN</string>
    <string name="error_msg_invalid_otp">Invalid PIN. Please enter the PIN again.</string>
    <string name="error_msg_pin_mismatch">PIN does not match. Please enter the PIN again.</string>
    <string name="confirm_consent_pin">Confirm Consent PIN</string>
    <string name="create_consent_pin">Create Consent PIN</string>
    <string name="creating_pin">Creating transaction PIN&#8230;</string>
    <string name="verifying_pin">Verifying transaction PIN&#8230;</string>
    <string name="denying_consent">Denying consent&#8230;</string>
    <string name="revoking_consent">Revoking consent&#8230;</string>
    <string name="title_deny_consent">Deny consent?</string>
    <string name="msg_deny_consent">Are you sure you want to deny this consent request?</string>
    <string name="consent_granted">Consent Granted Successfully</string>
    <string name="consent_denied">Consent Denied Successfully</string>
    <string name="consent_revoked">Consent Revoked Successfully</string>
    <string name="blocked_user_exceed_limit">You have exceeded the number of  attempts. Please try again after sometime.</string>
    <string name="consent_expiry_message">Cannot process the request as the consent request has expired</string>
    <string name="pin_updated">Consent PIN changed successfully</string>
    <string name="pin_created">Consent PIN created successfully</string>
    <string name="error_msg_invalid_datetime">Please select a future date/time</string>
    <string name="link_provider_msg">Please link the records with the visited hospitals to continue</string>
    <string name="link_provider_title">Link Provider</string>
</resources>
