<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data >
        <variable
            name="clickHandler"
            type="in.projecteka.jataayu.core.handler.OtpSubmissionClickHandler" />

        <variable
            name="isOtpEntered"
            type="Boolean" />

        <variable
            name="otpChangeWatcher"
            type="in.projecteka.jataayu.core.handler.OtpChangeWatcher" />
        <variable
            name="viewModel"
            type="in.projecteka.jataayu.consent.viewmodel.UserVerificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ConfirmPinFragment">

        <TextView
                android:id="@+id/lblBlockUser"
                style="@style/TextAppearance.AccountLockErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/ic_cross"
                android:drawablePadding="@dimen/content_margin_medium"
                android:padding="20dp"
                android:text="@string/blocked_user_exceed_limit"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progress_bar_layout"
                app:layout_constraintTop_toTopOf="@+id/progress_bar_layout"
                app:layout_constraintVertical_bias="0.28"
                tools:visibility="visible" />

        <TextView
            android:id="@+id/lbl_enter_otp"
            style="@style/TextAppearance.ListItemSubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_invalid_pin"
            style="@style/TextAppearance.ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="@dimen/content_padding_large"
            android:text="@string/error_msg_invalid_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pin" />

        <ImageButton
            android:src="@{viewModel.shouldMask ? @drawable/ic_visibility_off : @drawable/ic_visibility_on}"
            android:onClick="@{() -> viewModel.togglePasswordVisible()}"
            android:layout_marginLeft="@dimen/content_margin_small"
            android:layout_marginStart="@dimen/content_margin_small"
            app:layout_constraintTop_toTopOf="@+id/et_pin"
            app:layout_constraintBottom_toBottomOf="@+id/et_pin"
            app:layout_constraintLeft_toRightOf="@+id/et_pin"
            android:layout_marginTop="@dimen/content_padding_large"
            android:id="@+id/img_btn_hide_or_show"
            app:layout_constraintTop_toBottomOf="@+id/lbl_enter_otp"
            style="@style/ShowOrHide"/>

        <in.projecteka.jataayu.presentation.ui.view.OtpOrPinEditText
            android:background="@drawable/rounded_corners_selector"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="200dp"
            android:layout_marginLeft="@dimen/content_margin_extra_extra_large"
            app:shouldMaskCharacters="@{viewModel.shouldMask}"
            android:layout_marginRight="@dimen/content_margin_extra_extra_large"
            android:layout_marginEnd="@dimen/content_margin_extra_extra_large"
            android:layout_marginStart="@dimen/content_margin_extra_extra_large"
            android:layout_marginTop="@dimen/content_padding_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/img_btn_hide_or_show"
            app:layout_constraintTop_toBottomOf="@+id/lbl_enter_otp"
            android:minEms="4"
            android:maxLength="4"
            app:onValueChanged="@{viewModel}"
            android:text="@={viewModel.inputPinLbl}"
            android:id="@+id/et_pin"
            style="@style/OtpOrPin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/Button"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:layout_marginStart="@dimen/content_margin_medium"
            android:layout_marginRight="@dimen/content_margin_medium"
            android:layout_marginEnd="@dimen/content_margin_medium"
            android:layout_marginTop="@dimen/content_margin_extra_extra_large"
            android:onClick="@{clickHandler::onSubmitOtp}"
            android:text="@string/confirm_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:enabled="@{viewModel.confirmEnabled}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pin"
            app:layout_constraintVertical_bias="0.05">

        </com.google.android.material.button.MaterialButton>

        <include
            android:id="@+id/progress_bar_layout"
            app:showProgress="@{viewModel.showProgress}"
            app:message="@{viewModel.showProgressMessage}"
            layout="@layout/progress_layout"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>