<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.ConfirmConsentFragment">

    <data>

        <variable
            name="clickHandler"
            type="in.org.projecteka.jataayu.consent.ui.handler.ProviderSelectionClickHandler" />

        <variable
            name="careContext"
            type="in.org.projecteka.jataayu.core.model.CareContext" />

        <variable
            name="confirmClickHandler"
            type="in.org.projecteka.jataayu.consent.ui.handler.ConfirmConsentHandler" />

        <variable
            name="progressBarVisibility"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/TextAppearance.ListItemSubHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/lbl_title"
            style="@style/TextAppearance.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_large"
            android:text="@string/confirm_consent_label"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_sub_title"
            style="@style/TextAppearance.ListItemSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_small"
            android:text="@string/accounts_to_provide_information"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title" />

        <CheckBox
            android:id="@+id/cb_link_all_providers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_large"
            android:checked="true"
            android:fontFamily="sans-serif-medium"
            android:onClick="@{clickHandler::toggleProvidersSelection}"
            android:paddingStart="@dimen/content_margin_medium"
            android:paddingEnd="@dimen/content_margin_medium"
            android:text="@string/all_linked_providers"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/lbl_sub_title" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/content_margin_medium"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/cb_link_all_providers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLinkedAccounts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/content_margin_medium"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:listitem="@layout/patient_account_result_item" />

        <FrameLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvLinkedAccounts">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirm"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/content_margin_large"
                android:onClick="@{confirmClickHandler::confirmConsent}"
                android:text="@string/confirm"
                app:toggledVisibility="@{!progressBarVisibility}" />
        </FrameLayout>


        <RelativeLayout
            android:id="@+id/progressbar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progressbar_dimmed_bg"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toggledVisibility="@{progressBarVisibility}"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/progressbar_text"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_bar"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/loading_linked_accounts"
                android:textColor="@color/white" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/content_margin_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/content_margin_large" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>